build: shred.c: avoid i686-specific gcc -Wstrict-overflow warning

* src/shred.c: Avoid gcc -Wstrict-overflow warning.
Addresses http://bugs.gnu.org/11927